@@ -1,3 +1,8 @@
+2008-06-08  Joseph Myers  <joseph@codesourcery.com>
+
+	PR tree-optimization/36218
+	* config/mh-mingw (LDFLAGS): Define.
+
 2008-06-05  Danny Smith  <dannysmith@users.sourceforge.net>
 
 	PR driver/35916
