@@ -1,3 +1,11 @@
+2008-06-08  Joseph Myers  <joseph@codesourcery.com>
+
+	PR tree-optimization/36218
+	* Makefile.def (flags_to_pass): Add LDFLAGS_FOR_BUILD.
+	* Makefile.tpl (EXTRA_BUILD_FLAGS): Define.
+	(all prefix="build-"): Pass them to build-system sub-makes.
+	* Makefile.in: Regenerate.
+
 2008-05-16  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* src-release (DEVO_SUPPORT): Add ChangeLog, MAINTAINERS,
